--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 ProyectoNetbeans/.vscode/settings.json
 .vscode/
+
+ProyectoNetbeans/nbproject/private/private\.xml
+
+ProyectoNetbeans/nbproject/private/
