Modificados algunos estilos de los botones

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ ProyectoNetbeans/.vscode/settings.json
 ProyectoNetbeans/nbproject/private/private\.xml
 
 ProyectoNetbeans/nbproject/private/
+
+ProyectoNetbeans/assets/components/home/test\.html
